[gd_scene load_steps=36 format=3 uid="uid://dlukhtdc5xlsr"]

[ext_resource type="Texture2D" uid="uid://2no52g0bxi7i" path="res://assets/visual/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://xgly6ivcsmm1" path="res://scripts/entities/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bso48nuhjmvq2" path="res://assets/visual/player_sprite_sheet.png" id="3_1ie0h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42nxq"]
atlas = ExtResource("3_1ie0h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u6hq"]
atlas = ExtResource("3_1ie0h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4qa6"]
atlas = ExtResource("3_1ie0h")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7kx"]
atlas = ExtResource("3_1ie0h")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnykm"]
atlas = ExtResource("3_1ie0h")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5rqy"]
atlas = ExtResource("3_1ie0h")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6tgf"]
atlas = ExtResource("3_1ie0h")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_73kkf"]
atlas = ExtResource("3_1ie0h")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5sgd"]
atlas = ExtResource("3_1ie0h")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ki56"]
atlas = ExtResource("3_1ie0h")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_saib0"]
atlas = ExtResource("3_1ie0h")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogpgs"]
atlas = ExtResource("3_1ie0h")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_spk56"]
atlas = ExtResource("3_1ie0h")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yk18"]
atlas = ExtResource("3_1ie0h")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4o2o"]
atlas = ExtResource("3_1ie0h")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr3on"]
atlas = ExtResource("3_1ie0h")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ngu4"]
atlas = ExtResource("3_1ie0h")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv5ih"]
atlas = ExtResource("3_1ie0h")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n36er"]
atlas = ExtResource("3_1ie0h")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d745t"]
atlas = ExtResource("3_1ie0h")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc1tv"]
atlas = ExtResource("3_1ie0h")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe83n"]
atlas = ExtResource("3_1ie0h")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwche"]
atlas = ExtResource("3_1ie0h")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv3je"]
atlas = ExtResource("3_1ie0h")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hm5d"]
atlas = ExtResource("3_1ie0h")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw3xw"]
atlas = ExtResource("3_1ie0h")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gvyl"]
atlas = ExtResource("3_1ie0h")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2s01"]
atlas = ExtResource("3_1ie0h")
region = Rect2(96, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w7c3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3vyb7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42nxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u6hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4qa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnykm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5rqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6tgf")
}],
"loop": true,
"name": &"walk_down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73kkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5sgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ki56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saib0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogpgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spk56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yk18")
}],
"loop": true,
"name": &"walk_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4o2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr3on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ngu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv5ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n36er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d745t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc1tv")
}],
"loop": true,
"name": &"walk_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe83n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwche")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hm5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw3xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gvyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2s01")
}],
"loop": true,
"name": &"walk_up",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w7c3h"]
radius = 3.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 4.0
height = 16.0

[sub_resource type="Curve2D" id="Curve2D_08t41"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8, 0, 0, 0, 0, 0, 0, -12, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 0, 12, 0, 0, 0, 0, -8, 0)
}
point_count = 5

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 13
collision_mask = 13
script = ExtResource("1_g2els")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w7c3h")
animation = &"walk_down"
autoplay = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_w7c3h")

[node name="InteractionRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 15)
collision_mask = 9

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
shape = SubResource("CapsuleShape2D_g2els")

[node name="ShieldRadius" type="Path2D" parent="."]
curve = SubResource("Curve2D_08t41")

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
